@@ -845,11 +845,11 @@ private:
                                     }
                                     storeValue(undefined, storeIndex);
                                 }
+                                
+                                node->remove();
+                                node->origin.exitOK = canExit;
+                                break;
                             }
-
-                            node->remove();
-                            node->origin.exitOK = canExit;
-                            break;
                         }
                     } else {
                         unsigned numberOfArgumentsToSkip = 0;
